--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -25,12 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Fetch AWS Machine Name
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          AWS_INSTANCE_ID=`curl -s http://169.254.169.254/latest/meta-data/instance-id`
+          EC2_NAME=$(aws ec2 describe-tags --region $REGION --filters "Name=resource-id,Values=$AWS_INSTANCE_ID" "Name=key,Values=Name" --output text | cut -f5)
+
+
