--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -28,7 +28,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Fetch AWS Machine Name
         run: |
-          AWS_INSTANCE_ID=`curl -s http://169.254.169.254/latest/meta-data/instance-id`
-          EC2_NAME=$(aws ec2 describe-tags --region $REGION --filters "Name=resource-id,Values=$AWS_INSTANCE_ID" "Name=key,Values=Name" --output text | cut -f5)
-
-
+          echo ${ runner.os } 
+          echo $HOSTNAME
