--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -28,5 +28,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Fetch AWS Machine Name
         run: |
-          echo ${ runner.os } 
           echo $HOSTNAME
+          sleep 360
