--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Fetch AWS Machine Name
+      - name: Configure Hostname
         run: |
           echo $HOSTNAME
           sleep 360
